# PlatformFolders

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  appveyor.yml  compile_test.sh  doxygen.conf  platform_folders.cpp  platform_foldersConfig.cmake.in
.github/workflows/: build.yml
html/doxygen/: index.html
html/doxygen/3.0/: annotated.html  classes.html  classsago_1_1PlatformFolders-members.html  classsago_1_1PlatformFolders.html  dir_8e47b5f8672a00523ffcd0bfe6984bf7.html  files.html  functions.html  functions_func.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesago.html  platform__folders_8h_source.html
html/doxygen/3.0/search/: all_1.js
html/doxygen/3.2.0/: annotated.html  classes.html  classsago_1_1PlatformFolders-members.html  classsago_1_1PlatformFolders.html  dir_8e47b5f8672a00523ffcd0bfe6984bf7.html  files.html  functions.html  functions_func.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesago.html  platform__folders_8h_source.html
html/doxygen/3.2.0/search/: all_0.js  classes_0.js  functions_1.js  searchdata.js
html/doxygen/4.0.0/: classsago_1_1PlatformFolders.html  dir_8e47b5f8672a00523ffcd0bfe6984bf7.html  files.html  functions.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesago.html  platform__folders_8h_source.html
html/doxygen/4.0.0/search/: all_0.js  all_3.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js
html/doxygen/4.1.0/: dir_8e47b5f8672a00523ffcd0bfe6984bf7.html  files.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesago.html  platform__folders_8h_source.html
html/doxygen/4.1.0/search/: all_1.js  all_2.js  pages_0.js
html/doxygen/4.2.0/: annotated.html  classes.html  classsago_1_1PlatformFolders-members.html  dir_8e47b5f8672a00523ffcd0bfe6984bf7.html  files.html  functions_func.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesago.html  platform__folders_8h_source.html
html/doxygen/4.2.0/search/: all_1.js  all_2.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  searchdata.js
nbproject/: configurations.xml  project.xml
sago/: platform_folders.cpp  platform_folders.h
test/: CMakeLists.txt  integration.cpp
